add facebook & twitter

--- a/rootfs/etc/privoxy/config
+++ b/rootfs/etc/privoxy/config
@@ -24,6 +24,8 @@ enable-proxy-authentication-forwarding 0
 forward          /    .
 forward-socks5  .dropbox*.com 127.0.0.1:7070  .
 forward-socks5  .*google*.* 127.0.0.1:7070  .
+forward-socks5  .*facebook*.* 127.0.0.1:7070  .
+forward-socks5  .*twitter*.* 127.0.0.1:7070  .
 
 forwarded-connect-retries  0
 
