--- a/rootfs/etc/privoxy/config
+++ b/rootfs/etc/privoxy/config
@@ -26,6 +26,7 @@ forward-socks5  .dropbox*.com 127.0.0.1:7070  .
 forward-socks5  .*google*.* 127.0.0.1:7070  .
 forward-socks5  .*facebook*.* 127.0.0.1:7070  .
 forward-socks5  .*twitter*.* 127.0.0.1:7070  .
+forward-socks5  .themoviedb.org 127.0.0.1:7070  .
 
 forwarded-connect-retries  0
 
